Added about section

--- a/Exe2/index.html
+++ b/Exe2/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section id="about">
+  <h2>About us</h2>
+  <p>This project is developed as part of front-end frameworks practice.</p>
+</section>
 </body>
 </html>
