Added contact form

--- a/Exe2/index.html
+++ b/Exe2/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section id="contact">
+  <h2>Contact us</h2>
+  <form>
+    <input type="text" placeholder="Name" required>
+    <input type="email" placeholder="Email" required>
+    <textarea placeholder="Message"></textarea>
+  </form>
+</section>
 </body>
 </html>
