--- a/Exe3/index.html
+++ b/Exe3/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EXP-3</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive Page</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<img src="/Exe3/images/car.jpg.jpg" alt="Demo" class="responsive-img"></body>
+  <main>
+    <img src="/Exe3/images/car.jpg.jpg" alt="Demo" class="responsive-img">
+    <p>This is a responsive webpage.</p>
+  </main>
+</body>
 </html>
